force-app/main/default/objects/BrokerCommission__c/BrokerCommission__c.object-meta.xml
<CustomObject>
    <label>Broker Commission</label>
    <nameField>
        <label>Broker Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>