force-app/main/default/objects/BrokerCommission__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Commissions</relationshipLabel>
    <relationshipName>Broker_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>