force-app/main/default/objects/BrokerCommission__c/fields/CommissionAmount__c.field-meta.xml
<CustomField>
    <fullName>CommissionAmount__c</fullName>
    <description>Commission Amount that as to be paid for the broker to be specified.</description>
    <inlineHelpText>Commission Amount that as to be paid for the broker to be specified.</inlineHelpText>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>