force-app/main/default/objects/BrokerCommission__c/fields/CommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>CommissionPercentage__c</fullName>
    <description>Commission Percentage that is applicable for the broker</description>
    <inlineHelpText>Commission Percentage that is applicable for the broker</inlineHelpText>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>