force-app/main/default/objects/BrokerCommission__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Broker Commissions</relationshipLabel>
    <relationshipName>Broker_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>